# Studio

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TESTING.md  THIRD-PARTY-NOTICES.md  commitlint.config.js  design_rules.md  docker-compose.cloudflare-tunnel.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  landing.html  lint-staged.config.js  package-lock.json  package.json
orchestrator/: .dockerignore  Dockerfile  Dockerfile.devserver  README.md  alembic.ini  create_superuser.py  make_admin.py  pyproject.toml  pyrightconfig.json  seed_bases.py  temp_filename.txt
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 0001_initial_schema.py  0002_add_theme_preset.py  0003_add_themes_table.py  0004_add_user_providers_table.py  0005_billing_credits_system.py  0006_add_chat_position.py  0007_add_base_user_submissions.py  0008_add_two_factor_auth.py  0009_add_template_archive_fields.py  0010_default_visibility_private.py  0011_expand_avatar_url_to_text.py  0012_add_project_asset_directories.py  0013_add_key_base_url.py  0014_pricing_overhaul.py  0015_themes_marketplace.py  0016_usage_log_byok_flag.py  0017_disabled_models.py  0018_add_deployment_provider.py  0019_add_deployment_targets.py  0020_admin_panel_schema.py  0021_agent_steps_sessions.py  0022_message_updated_at.py  0023_add_container_startup_command.py  0024_add_skills_system.py  0025_add_channel_and_mcp_system.py  0026_add_agent_mcp_assignments.py  0027_add_git_repo_url_to_marketplace_agents.py  0028_fix_missing_ondelete_fk_clauses.py  0029_add_template_build_system.py  0030_add_v2_project_fields.py  0031_volume_hub_architecture.py
orchestrator/app/: auth.py  auth_external.py  config.py  database.py  main.py  models.py  models_auth.py  models_kanban.py  oauth.py  referral_db.py  schemas.py  schemas_auth.py  schemas_feedback.py  schemas_theme.py  username_validation.py  users.py  worker.py
orchestrator/app/agent/: README.md  __init__.py  apply_patch.py  base.py  compaction.py  factory.py  features.py  iterative_agent.py  models.py  parser.py  plan_manager.py  prompts.py  react_agent.py  resource_limits.py  stream_agent.py  subagent_manager.py  tesslate_agent.py  tool_converter.py  trajectory.py  trajectory_writer.py
orchestrator/app/middleware/: activity_tracking.py  csrf.py
orchestrator/app/routers/: admin.py  agent.py  agents.py  auth.py  billing.py  channels.py  chat.py  creators.py  deployment_credentials.py  deployment_oauth.py  deployment_targets.py  deployments.py  external_agent.py  feedback.py  git.py  git_providers.py  github.py  internal.py  kanban.py  marketplace.py  mcp.py  mcp_server.py  projects.py  referrals.py  secrets.py  shell.py  snapshots.py  tasks.py  terminal.py  themes.py  two_fa.py  users.py  webhooks.py
orchestrator/app/seeds/: __init__.py  community_bases.py  marketplace_agents.py  marketplace_bases.py  opensource_agents.py  skills.py  themes.py  workflow_templates.py
orchestrator/app/services/: __init__.py  activity_tracker.py  agent_audit.py  agent_context.py  agent_task.py  base_cache_manager.py  base_config_parser.py  cache_service.py  command_validator.py  compute_manager.py  container_initializer.py  credential_manager.py  credit_service.py  daily_credit_reset.py  deployment_encryption.py  discord_service.py  distributed_lock.py  email_service.py  fileops_client.py  framework_detector.py  git_manager.py  github_client.py  github_oauth.py  hibernate.py  hub_client.py  idle_monitor.py  litellm_service.py  model_health.py  model_pricing.py  node_discovery.py  nodeops_client.py  ntfy_service.py  oauth_state.py  project_patcher.py  pty_broker.py  pubsub.py  recommendations.py  secret_codec.py  secret_manager_env.py  service_definitions.py  (+15 more)
orchestrator/app/utils/: __init__.py  async_fileio.py  async_subprocess.py  code_patching.py  resource_naming.py  slug_generator.py
orchestrator/tests/: README.md  conftest.py  test_project_auto_add_base.py  test_resource_limits.py  test_retry_logic.py  test_validate_file_path.py
orchestrator/tests/agent/: __init__.py
orchestrator/tests/containers/: __init__.py  test_container_isolation.py  test_file_extraction.py  test_orchestrator_lifecycle.py
orchestrator/tests/deployment/: README.md  __init__.py  test_builder.py  test_manager.py  test_providers.py  test_routers.py
orchestrator/tests/fixtures/: __init__.py  golden_parser_inputs.json  golden_patches.json  golden_tool_outputs.json
orchestrator/tests/integration/: __init__.py  conftest.py  test_auth_integration.py  test_auth_refresh.py  test_file_operations.py  test_marketplace_integration.py  test_projects_integration.py
(+924 files in other folders)
